@@ -4,11 +4,11 @@ INPUT
 MPZ
         if (sv_derived_from($arg, \"Math::BigInt::GMP\")) {
             IV tmp = SvIV((SV*)SvRV($arg));
-            $var = ($type) tmp;
+            $var = INT2PTR($type, tmp);
         }
         else
             croak(\"$var is not of type Math::BigInt::GMP\")
 
 OUTPUT
 MPZ
-	sv_setref_pv($arg, \"Math::BigInt::GMP\", (void*)$var);
+	sv_setref_pv($arg, \"Math::BigInt::GMP\", INT2PTR(void*, $var));
