@@ -1,4 +1,9 @@
 
+2007-07-31 v1.24 Tels 5530 tests
+  * apply patch for warnings about ptr size mismatch under Cygwin (thanx Reini Urban!)
+  * make it work under 5.6.x again by defining SvUOK() (Thanx Marcus Holland-Moritz
+    and Reini Urban!)
+
 2007-07-25 v1.23 Tels 5527 tests
   * require Math::BigInt 1.87
   * fix for _new() (appeared under Cygwin, but possible others, thanx
